tests/ui/transmute-ptr-to-usize.msrv.stderr
error[E0277]: the trait bound `*const usize: IntoBytes` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ptr-to-usize.rs:18:30
   |
18 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `IntoBytes` is not implemented for `*const usize`
   |
note: required by a bound in `POINTER_VALUE::transmute`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ptr-to-usize.rs:18:30
   |
18 | const POINTER_VALUE: usize = transmute!(&0usize as *const usize);
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                              |
   |                              required by a bound in this
   |                              required by this bound in `POINTER_VALUE::transmute`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
